# alto2txt2fixture

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  conftest.py  create_adjacent_tables.py  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  run.py  running.html  sitemap.xml  understanding-results.html
.github/workflows/: ci.yaml
alto2txt2fixture/: __init__.py  __main__.py  census.py  cli.py  create_adjacent_tables.py  jisc.py  log.py  parser.py  patterns.py  plaintext.py  router.py  run.py  settings.py  types.py  utils.py
docs/: gen_ref_pages.py  index.md  running.md  understanding-results.md
docs/tutorial/: first-steps.md
reference/: SUMMARY.html
reference/alto2txt2fixture/: __main__.html  cli.html  create_adjacent_tables.html  index.html  jisc.html  log.html  parser.html  patterns.html  plaintext.html  router.html  settings.html  types.html  utils.html
search/: search_index.js  search_index.json
tests/: conftest.py  test_cli.py  test_create_adjacent_tables.py  test_newspaper.py  test_newspaper.py.orig  test_plaintext.py  test_utils.py
tests/bl_lwm/: 0003079_18980121_sect0001.txt  0003548_19040707_art0037.txt
tutorial/: first-steps.html
