[tool.poetry]
name = "alto2txt2fixture"
version = "0.1.0"
description = ""
authors = [
  "Aoife Hughes <ahughes@turing.ac.uk>",
  "Griffith Rees <grees@turing.ac.uk>",
  "Kalle Westerling <kalle.westerling@bl.uk>",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
tqdm = "^4.66.2"
pandas = "^2.2.0"
colorama = "^0.4.6"
numpy = "^1.26.4"
pytz = "^2022.7.1"
rich = "^12.6.0"
types-pytz = "^2023.4.0.20240130"
python-slugify = "^8.0.4"
typer = {extras = ["all"], version = "^0.9.0"}
types-python-slugify = "^8.0.2.20240127"
validators = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^0.9.7"
ipython = "^8.21.0"
pytest-cov = "^4.1.0"
mkdocs-material = "^9.5.9"
pre-commit = "^3.6.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-section-index = "^0.3.5"
mkdocs-literate-nav = "^0.6.0"
mkdocstrings-python = "^1.8.0"
mypy = "^1.8.0"
black = "^23.12.1"
pygments = "^2.17.2"
mkdocs-include-markdown-plugin = "^6.0.4"
pytest-xdist = "^3.5.0"
psutil = "5.9.4"
coverage-badge = "^1.1.0"
pytest-random-order = "^1.1.1"

[tool.isort]
profile = "black"

[tool.pycln]
all = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
a2t2f-news = "alto2txt2fixture.__main__:run"
a2t2f-adj = "alto2txt2fixture.create_adjacent_tables:run"
a2t2f-cli = "alto2txt2fixture.cli:cli"

[tool.pytest.ini_options]
xfail_strict = true
addopts = """
--cov=alto2txt2fixture
--cov-report=term:skip-covered
--pdbcls=IPython.terminal.debugger:TerminalPdb
--doctest-modules
--doctest-continue-on-failure
--doctest-report ndiff
--durations=3
"""
# -m "not download"
# -p no:sugar
markers = [
  "slow: slow (deselect with '-m \"not slow\"')",
  "download: requires downloading (deselect with '-m \"not download\"')",
  "ci_error: sensitive to errors in continuous integration",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS",]
log_cli_level = 'DEBUG'
testpaths = [
  "tests",
  "alto2txt2fixture"
]

[tool.mypy]
python_version = "3.11"
# check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
# plugins = [
# ]
#
# [[tool.mypy.overrides]]
# module = "*.migrations.*"
# ignore_errors = true
