[tool.poetry]
name = "alto2txt2fixture"
version = "0.1.0"
description = ""
authors = ["Kalle Westerling <kalle.westerling@bl.uk>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tqdm = "^4.65.0"
pandas = "^2.0.3"
colorama = "^0.4.6"
numpy = "^1.25.2"
pytz = "^2022.7.1"
rich = "^12.6.0"
types-pytz = "^2023.3.0.0"
python-slugify = "^8.0.1"
typer = {extras = ["all"], version = "^0.9.0"}
types-python-slugify = "^8.0.0.3"

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^0.9.7"
ipython = "^8.14.0"
pytest-cov = "^4.1.0"
mkdocs-material = "^9.1.21"
pre-commit = "^3.3.3"
mkdocs-gen-files = "^0.5.0"
mkdocs-section-index = "^0.3.5"
mkdocs-literate-nav = "^0.6.0"
mkdocstrings-python = "^1.2.1"
mypy = "^1.4.1"
black = "^24.3.0"
pygments = "^2.15.1"
mkdocs-include-markdown-plugin = "^4.0.4"
pytest-xdist = "^3.3.1"
psutil = "5.9.4"
coverage-badge = "^1.1.0"
pytest-random-order = "^1.1.0"

[tool.isort]
profile = "black"

[tool.pycln]
all = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
a2t2f-news = "alto2txt2fixture.__main__:run"
a2t2f-adj = "alto2txt2fixture.create_adjacent_tables:run"
a2t2f-cli = "alto2txt2fixture.cli:cli"

[tool.pytest.ini_options]
xfail_strict = true
addopts = """
--cov=alto2txt2fixture
--cov-report=term:skip-covered
--pdbcls=IPython.terminal.debugger:TerminalPdb
--doctest-modules
--doctest-continue-on-failure
--doctest-report ndiff
--durations=3
"""
markers = [
  "slow: slow (deselect with '-m \"not slow\"')",
  "download: requires downloading (deselect with '-m \"not download\"')",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS",]
testpaths = [
  "tests",
  "alto2txt2fixture"
]

[tool.mypy]
python_version = "3.11"
# check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
# plugins = [
# ]
#
# [[tool.mypy.overrides]]
# module = "*.migrations.*"
# ignore_errors = true
